# emdfile

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py  examples-usage.rst  examples.rst  index.rst  integration.rst  make.bat  requirements.txt  subclassing.rst
docs/api/: index.rst  io.rst  utils.rst
emd/: __init__.py  read.py  write.py
emd/classes/: __init__.py  array.py  custom.py  pointlist.py  pointlistarray.py  tree.py  utils.py
emdfile/: __init__.py  read.py
emdfile/classes/: array.py  tree.py
samplecode/: basic_usage.ipynb  emdfile_intro_example.ipynb  emdfile_package_walkthrough.ipynb  functionality_walkthrough.ipynb  long_narrative_example.ipynb  test_custom_classes.py
samplecode/sample_custom_emd_classes/: array_subclass_TEMPLATE.py  array_subclass_sample1.py  array_subclass_sample2.py  custom_subclass_TEMPLATE.py  custom_subclass_sample.py  points_subclass_TEMPLATE.py  points_subclass_sample.py  raggedarray_subclass_sample.py
samplecode/subclassing_demos/: array_subclass_TEMPLATE.py  custom_subclass_TEMPLATE.py  points_subclass_TEMPLATE.py  raggedarray_subclass_TEMPLATE.py
src/emdfile/: .read.py.swp  __init__.py  read.py  read_EMD_v0p1.py  tqdmnd.py  utils.py  write.py
test/: README.md  clear_h5_files.py  test_base_classes.py  test_emd.py  test_emd01.py  test_header.py  test_import.py  test_listwrite.py  test_metadata.py  test_repr.py  test_tree.py
test/.ipynb_checkpoints/: demo_v13_dataclasses-checkpoint.ipynb
test/test_tree/: test_tree.py
tutorials/: emd_intro_example.ipynb  emd_package_walkthrough.ipynb  test_custom_class.py  test_custom_classes.py
(+103 files in other folders)
