[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emdfile"
dynamic = ["version"]
authors = [
    { name="Benjamin H. Savitzky", email="ben.savitzky@gmail.com" }
]
descriptor = "An HDF5 / Python interface for scientific data"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    'h5py >= 3.2.0',
    'tqdm >= 4.46.1',
    'numpy',
]

[project.optional-dependencies]
docs = ["sphinx == 8.0.2"]

[tool.hatch.version]
path = "src/emdfile/version.py"
#validate-bump = false

[project.urls]
"github" = "https://github.com/py4dstem/emdfile"
"emdatasets" = "https://emdatasets.com/format/"

